--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,11 @@
+/*
+ *  Copyright © 2018 Team X, CMPUT301, University of Alberta - All Rights Reserved.
+ * You may use, distribute or modify this code under terms and conditions of Code of Student Behavior at
+ * University of Alberta.
+ * You can find a copy of the license in this project. Otherwise, please contact contact@abc.ca
+ * /
+ */
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
