--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,11 @@
+#
+# /* Copyright © 2018 Team X, CMPUT301, University of Alberta - All Rights Reserved.
+# *You may use, distribute or modify this code under terms and conditions of Code of Student Behavior at
+# *University of Alberta.
+# *You can find a copy of the license in this project. Otherwise, please contact contact@abc.ca
+# */
+#
+
 #Wed Jan 17 17:25:05 MST 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
